# hnes

./: .gitignore  CMakeLists.txt
include/: cpu.h  global.h  macros.h  ppu.h  ram.h  rom.h  system.h
src/: cpu.c  main.c  ram.c  rom.c  system.c
test/: build.sh  main.c  test_cpu.h  test_system.h
